[Win][Clang][WebKitLegacy] Fix compilation errors and warnings of WebPreferences.cpp https://bugs.webkit.org/show_bug.cgi?id=189538

Reviewed by Per Arne Vollan.

* WebPreferences.cpp:
Changed the type of CFNumberTraits::Type from unsigned int to CFNumberType.
(WebPreferences::migrateWebKitPreferencesToCFPreferences):
Apply static_cast to the result of OR-ed CFPropertyListFormat.
(WebPreferences::screenFontSubstitutionEnabled):
Assign false to the content of the out variable 'enabled', not assigning 0 to the variable.

Canonical link: https://commits.webkit.org/204546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235966 268f45cc-cd09-0410-ab3c-d52691b4dbfc